board: add NUCLEO-F429ZI board support
Add initial support for the STM32 NUCLEO-F429ZI board.

This commit introduces a new board definition, including board
initialization code, build rules, and default configuration.
It also updates Kconfig and Makefile entries to integrate the
new board into the build system.

The board configuration supports the on-board ST-Link Virtual COM Port (VCOM)
using USART3, allowing kernel log output and debugging via the standard USB
ST-Link interface without additional hardware.

- Add new board definition under board/nucleof429
  - board initialization code
  - build.mk and defconfig
- Update board and platform Kconfig entries
- Update top-level Makefile for board selection
- Enable USART3 for ST-Link VCOM console output

- STM32 NUCLEO-F429ZI
- ST-Link V2-1 (on-board)

--- a/board/Kconfig
+++ b/board/Kconfig
@@ -22,6 +22,12 @@ config BOARD_STM32F429DISCOVERY
 	help
 	  STM32F429 Discovery board with STM32F429ZIT6 MCU and LCD.
 
+config BOARD_STM32F429NUCLEO
+	bool "STM32F429 Nucleo"
+	select PLATFORM_STM32F429
+	help
+	  STM32F429 Nucleo board with STM32F429ZIT6 MCU.
+
 config BOARD_STM32P103
 	bool "Olimex STM32-P103"
 	select PLATFORM_STM32F1
